# b64

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  b64.c  b64.h  main.cpp
test/: CMakeLists.txt  Test.cpp  decodeFromFileTest.txt  encodeFromFileTest.txt
